# django_local_library

./: .gitignore  README.md  pyproject.toml  requirements.txt
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_delete_mymodelname.py  0003_bookinstance_borrower.py  0004_alter_bookinstance_options.py
catalog/templates/: base_generic.html  index.html
locallibrary/: settings.py  urls.py
