[tool.poetry]
name = "django_projects"
version = "0.1.0"
description = ""
authors = ["Dylan Do <dylan2002do@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
